# credit_offers

./: .gitignore  main.py  pyproject.toml
notebooks/: 01_data_overview.ipynb  02_eda_full_data.ipynb  03_eda_accepted_data.ipynb
